--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -143,22 +143,6 @@
     <None Include="paket.references" />
     <None Include="Test.fsx" />
   </ItemGroup>
-  <Choose>
-    <When Condition=" '$(Configuration)' == 'Release-NET35' ">
-      <ItemGroup>
-        <Reference Include="System.Threading">
-          <HintPath>..\..\packages\TaskParallelLibrary\lib\net35\System.Threading.dll</HintPath>
-          <Private>True</Private>
-          <Paket>True</Paket>
-        </Reference>
-      </ItemGroup>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <Reference Include="System.Numerics" />
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
   <ItemGroup>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="mscorlib" />
@@ -167,5 +151,23 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
+  <Choose>
+    <When Condition=" '$(Configuration)' == 'Release-NET35' ">
+      <ItemGroup>
+        <Reference Include="System.Threading">
+          <HintPath>..\..\packages\TaskParallelLibrary\lib\net35\System.Threading.dll</HintPath>
+          <Private>True</Private>
+          <Paket>false</Paket>
+        </Reference>
+      </ItemGroup>
+    </When>
+  </Choose>
+  <Choose>
+    <When Condition=" '$(Configuration)' != 'Release-NET35' ">
+      <ItemGroup>
+        <Reference Include="System.Numerics" />
+      </ItemGroup>
+    </When>
+  </Choose>
   <Import Project="..\..\.paket\paket.targets" />
 </Project>
