Add ISO 8601 test script, #68.

--- a/src/FsPickler.Json/FsPickler.Json.fsproj
+++ b/src/FsPickler.Json/FsPickler.Json.fsproj
@@ -109,6 +109,7 @@
     <Compile Include="JsonSerializer.fs" />
     <Compile Include="Combinators.fs" />
     <None Include="Test.fsx" />
+    <None Include="Iso8601DateTime.fsx" />
     <Content Include="paket.references" />
     <None Include="paket.template" />
   </ItemGroup>
