--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
-language: objective-c
-
-env:
-  matrix:
-    - MONO_VERSION="4.0.2"
+language: csharp
 
 install:
-  - wget "http://download.mono-project.com/archive/${MONO_VERSION}/macos-10-x86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
-  - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
 
 script: 
   - ./build.sh
