--- a/src/FsPickler/FsPickler.fsproj
+++ b/src/FsPickler/FsPickler.fsproj
@@ -95,6 +95,7 @@
   <Import Project="$(FSharpTargetsPath)" Condition="Exists('$(FSharpTargetsPath)')" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Utils\CsharpProxy.fs" />
     <Compile Include="Utils\Utils.fs" />
     <Compile Include="Utils\Emit.fs" />
     <Compile Include="Utils\Reflection.fs" />
